# custom-csa-rule-example

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/category_1/: CMakeLists.txt  MainCallChecker.cpp  MainCallChecker.h  Register.cpp
source/category_2/: CMakeLists.txt  CheckerOptionHandling.cpp  CheckerOptionHandling.h  Register.cpp
test/category_1/: test_main_call.c
