CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(custom-csa-rule-example)

IF(DEFINED LLVM_DIR)
    SET(ENV{LLVM_DIR} LLVM_DIR)
    SET(INPUT_LLVM_DIR LLVM_DIR)
ENDIF()

IF(DEFINED ENV{LLVM_DIR})
    SET(CMAKE_CXX_STANDARD 14)

    IF (CMAKE_BUILD_TYPE MATCHES "Debug")
        SET(CMAKE_CXX_FLAGS "-fPIC -std=gnu++14 -O0 -fno-rtti -Wno-deprecated \
                               -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8")
    ELSE()
        SET(CMAKE_CXX_FLAGS "-fPIC -std=gnu++14 -O3 -fno-rtti -Wno-deprecated \
                               -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 -DNDEBUG")
    ENDIF()

    SET(CMAKE_C_FLAGS "-fPIC")

    FIND_PACKAGE(LLVM REQUIRED CONFIG)
    LIST(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
    INCLUDE(AddLLVM)

    ADD_DEFINITIONS("${LLVM_DEFINATIONS}")
    INCLUDE_DIRECTORIES("${LLVM_INCLUDE_DIRS}")
ELSE()
    MESSAGE(FATAL_ERROR "please set LLVM_DIR")
ENDIF()

ADD_SUBDIRECTORY(source)